# Wasm-Contract-Script

./: abi.js  deploy.js  interact.js  package-lock.json  package.json  readme.Md
my_contract/: Cargo.toml  lib.rs
